update energy_laser_tower.geo